# rust-dersleri

./: .gitignore  README.md
A100_veri-tipleri-ve-sentaks/: Cargo.toml
A100_veri-tipleri-ve-sentaks/src/: main.rs
A100_veri-tipleri-ve-sentaks_alistirma_1/: Cargo.toml
A100_veri-tipleri-ve-sentaks_alistirma_1/src/: main.rs
A100_veri-tipleri-ve-sentaks_alistirma_2/src/: main.rs
A200_degiskenler-ve-hafiza-yonetimi/: Cargo.toml
A200_degiskenler-ve-hafiza-yonetimi/src/: main.rs
A200_degiskenler-ve-hafiza-yonetimi_alistirma_1/: Cargo.toml
A200_degiskenler-ve-hafiza-yonetimi_alistirma_1/src/: main.rs
homeworks/: Cargo.toml
homeworks/src/: hw_1_numerics.rs  hw_2_transpose_generics.rs  hw_2_transpose_simple.rs  hw_3_library.rs  hw_4_ls_command.rs  hw_5_health_statistics.rs
